tests/snapshots/protocols__serialize__tests__aes128_round.snap
---
source: src/serialize.rs
expression: content
---
struct RoundIO {
  in state: u128,
  in key: u128,
  out state_next: u128,
}

fn aes128<dut: RoundIO>(in key: u128, in state: u128, out output: u128) {
  dut.state := state;
  step(1);
  fork();
  dut.state := X;
  dut.key := key;
  step(1);
  dut.key := X;
  assert_eq(dut.state_next, output);
}
