tests/snapshots/protocols__serialize__tests__cond.snap
---
source: src/serialize.rs
expression: content
---
struct Multiplier {
  in a: u32,
  in b: u32,
  out c: u1,
  out s: u32,
}

fn mul<dut: Multiplier>(in a: u32, in b: u32, out s: u32) {
  dut.a := a;
  dut.b := b;
  step(1);
  step(1);
  fork();
  dut.a := X;
  dut.b := X;
  step(1);
  if 8 == 0 {
    step(1);
  } else {
    fork();
  }
  dut.c := 1;
  s := dut.s;
}
